# girokmoji

./: .gitignore  AGENTS.md  CHANGELOG.md  EXAMPLE.md  LICENSE  README.md  pyproject.toml
.github/scripts/: check_gitmoji.sh
.github/workflows/: pr-check.yml  python-publish.yml  release.yml
girokmoji/: __init__.py  __main__.py  changelog.py  const.py  exception.py  git.py  release.py  template.py
tests/: test_additional.py  test_changelog.py  test_cli.py  test_commit_log_parser.py  test_git.py  test_release.py  test_semver.py  test_template.py
