[project]
name = "gitmojilog"
version = "0.1.0"
description = "Change log creator for gitmoji logs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-gitmojis>=1.0.0",
]
authors = [
    { name = "Kim Milhan", email = "kimmilhan@gmail.com" },
]
keywords = ["emoji", "git", "gitmoji", "vcs", "ci", "release", "changelog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "ruff>=0.9.5",
]
